refactor: Ajustes do Sonar